--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: github/checkout@v2
+      - uses: actions/checkout@v2
 
       - name: Cache gems
         uses: actions/cache@v1
